[testnet] Simplify hostname management

--- a/tools/testnet/playbook-testnet.yml
+++ b/tools/testnet/playbook-testnet.yml
@@ -8,15 +8,11 @@
 - hosts: role_eth
   gather_facts: no
   roles:
-    - role: gather_private_ips
-      target_group_name: private_ips_eth_nodes
     - eth_node
 
 - hosts: role_raiden
   gather_facts: no
   roles:
-    - role: gather_private_ips
-      target_group_name: private_ips_raiden
     - raiden
 
 - hosts: name_raiden_testnet
@@ -24,12 +20,12 @@
   roles:
     - role: motd_info
       display_groups:
-        Eth: private_ips_eth_nodes
-        Raiden: private_ips_raiden
+        Eth: role_eth
+        Raiden: role_raiden
     - role: hosts_file
       display_groups:
-        Eth: private_ips_eth_nodes
-        Raiden: private_ips_raiden
+        Eth: role_eth
+        Raiden: role_raiden
 
 - hosts: name_raiden_testnet
   gather_facts: no
@@ -38,3 +34,4 @@
   tasks:
     - debug:
         msg: "{{ private_ip }}: {{ hostvars[inventory_hostname]['tags.Role'].lower() }}_{{ '{:02d}'.format(private_ip.rpartition('.')[2]|int) }}"
+        msg: "{{ private_ip }}: {{ hostname }}"
