--- a/tools/testnet/playbook-testnet.yml
+++ b/tools/testnet/playbook-testnet.yml
@@ -15,6 +15,11 @@
   roles:
     - raiden
 
+- hosts: role_infrastructure
+  gather_facts: no
+  roles:
+    - logstash
+
 - hosts: name_raiden_testnet
   gather_facts: no
   roles:
@@ -22,16 +27,15 @@
       display_groups:
         Eth: role_eth
         Raiden: role_raiden
+        Infrastructure: role_infrastructure
     - role: hosts_file
       display_groups:
         Eth: role_eth
         Raiden: role_raiden
+        Infrastructure: role_infrastructure
 
 - hosts: name_raiden_testnet
   gather_facts: no
-  tags:
-    - roles
   tasks:
     - debug:
-        msg: "{{ private_ip }}: {{ hostvars[inventory_hostname]['tags.Role'].lower() }}_{{ '{:02d}'.format(private_ip.rpartition('.')[2]|int) }}"
         msg: "{{ private_ip }}: {{ hostname }}"
