[testnet] Prune old docker images

--- a/tools/testnet/roles/docker/tasks/main.yml
+++ b/tools/testnet/roles/docker/tasks/main.yml
@@ -96,3 +96,5 @@
   command: "{{ ecr_repo_login.stdout }}"
   when: login_valid|failed
 
+- name: Prune old images
+  command: docker image prune --all --force
