--- a/tools/testnet/roles/raiden/tasks/main.yml
+++ b/tools/testnet/roles/raiden/tasks/main.yml
@@ -21,6 +21,8 @@
       - "{% for item in groups['role_eth'] %}{{ hostvars[item]['private_ip'] }}{{ '' if loop.last else ',' }}{% endfor %}"
       - "--seed"
       - "{{ private_ip }}"
+      - "--raiden-executable"
+      - "{{ 'raiden_echo_node' if hostvars[inventory_hostname].get('role.Echo') == 'true' else 'raiden' }}"
       - "--"
       - "--api-address"
       - "0.0.0.0:5001"
@@ -29,7 +31,7 @@
       - "--address"
       - "{{ keystore_address }}"
       - "--password-file"
-      - "/root/.raiden/password"
+      - "/keystore/password"
       - "--logging"
       - ":debug"
       - "--log-json"
