--- a/tools/testnet/roles/hostname/tasks/main.yml
+++ b/tools/testnet/roles/hostname/tasks/main.yml
@@ -1,5 +1,14 @@
 - set_fact:
-    hostname: "{{ hostvars[inventory_hostname]['tags.Role'].lower() }}_{{ '{:02d}'.format(private_ip.rpartition('.')[2]|int) }}"
+    host_offset: "{% set ips = [] %}{% for host in groups['role_{}'.format(hostvars[inventory_hostname]['tags.Role'])] %}{% if hostvars[inventory_hostname].get('tags.Echo') == hostvars[host].get('tags.Echo') %}{% do ips.append(hostvars[host]['private_ip'] | ipaddr('int')) %}{% endif %}{% endfor %}{{ ips | min }}"
+
+- debug:
+    var: host_offset
+
+- set_fact:
+    hostname: "{{ hostvars[inventory_hostname]['tags.Role'].lower() }}{{ '_echo' if hostvars[inventory_hostname].get('tags.Echo') == 'true' else '' }}_{{ '{:04d}'.format(private_ip | ipaddr('int') - host_offset | int + 1) }}"
+
+- debug:
+    var: hostname
 
 - name: Hostname
   hostname:
