--- a/tools/testnet/roles/raiden/tasks/main.yml
+++ b/tools/testnet/roles/raiden/tasks/main.yml
@@ -22,7 +22,7 @@
       - "--seed"
       - "{{ private_ip }}"
       - "--raiden-executable"
-      - "{{ 'raiden_echo_node' if hostvars[inventory_hostname].get('role.Echo') == 'true' else 'raiden' }}"
+      - "{{ 'raiden_echo_node' if hostvars[inventory_hostname].get('tags.Echo') == 'true' else 'raiden' }}"
       - "--"
       - "--api-address"
       - "0.0.0.0:5001"
@@ -35,3 +35,5 @@
       - "--logging"
       - ":debug"
       - "--log-json"
+      - "{{ '--token-address' if hostvars[inventory_hostname].get('tags.Echo') == 'true' else '' }}"
+      - "{{ echo_node_token_address if hostvars[inventory_hostname].get('tags.Echo') == 'true' else '' }}"
