--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ raiden/raidenwebui/node_modules/
 
 # never check in the smoketest_config.json
 smoketest_config.json
+/raiden/ui/web/node_modules/*
