[testnet] Fix geth startscript

--- a/tools/testnet/files/dockerfiles/geth-testnet/Dockerfile
+++ b/tools/testnet/files/dockerfiles/geth-testnet/Dockerfile
@@ -6,6 +6,8 @@ RUN \
     rm -rf /var/cache/apk/* && \
     pip3 install web3 click
 
+RUN pip3 install requests
+
 ADD run.py /usr/bin/run.py
 
 ENTRYPOINT ["/usr/bin/run.py"]
