[testnet] Add reverse proxy to access logstash and node APIs

--- a/tools/testnet/roles/logstash/tasks/main.yml
+++ b/tools/testnet/roles/logstash/tasks/main.yml
@@ -46,3 +46,7 @@
       - elasticsearch:elasticsearch
     ports:
       - 5601:5601
+    labels:
+      traefik.enable: "true"
+      traefik.frontend.rule: "Host:logs.raidentestnet.ulo.pe"
+      traefik.frontend.entryPoints: "https"
