--- a/tools/testnet/ansible.cfg
+++ b/tools/testnet/ansible.cfg
@@ -3,6 +3,7 @@
 inventory = ./inventory/inventory.sh
 private_key_file = ./keys/id_raiden_testnet
 vault_password_file = ./keys/id_raiden_testnet
+remote_user = ubuntu
 host_key_checking = False
 nocows = 1
 forks = 50
