Test bundling on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,6 @@ env:
     - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
     - TEST_TYPE='api' BLOCKCHAIN_TYPE='--blockchain-type=tester'
     - TEST_TYPE='api' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
-
 cache:
   pip: true
   directories:
@@ -51,6 +50,7 @@ script:
 
 after_success:
   - coveralls
+  - make bundle
 
 notifications:
   slack:
