Time-based + random identifier, increase timeout

--- a/raiden/ui/web/proxy.config.json
+++ b/raiden/ui/web/proxy.config.json
@@ -1,13 +1,11 @@
 {
   "/api": {
     "target": "http://localhost:5001",
-    "secure": false,
-    "loglevel": "debug"
+    "proxyTimeout": 600000
   },
   "/web3": {
     "target": "http://localhost:8545",
-    "secure": false,
-    "loglevel": "debug",
-    "pathRewrite": {"^/web3": ""}
+    "pathRewrite": {"^/web3": ""},
+    "proxyTimeout": 60000
   }
 }
