Control contract versions with bumpversion

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,3 +7,20 @@ tag = False
 
 [bumpversion:file:docs/conf.py]
 
+[bumpversion:file:raiden/smart_contracts/ChannelManagerLibrary.sol]
+search = "contract_version = \"{current_version}\";"
+
+[bumpversion:file:raiden/smart_contracts/EndpointRegistry.sol]
+search = "contract_version = \"{current_version}\";"
+
+[bumpversion:file:raiden/smart_contracts/NettingChannelContract.sol]
+search = "contract_version = \"{current_version}\";"
+
+[bumpversion:file:raiden/smart_contracts/NettingChannelLibrary.sol]
+search = "contract_version = \"{current_version}\";"
+
+[bumpversion:file:raiden/smart_contracts/Registry.sol]
+search = "contract_version = \"{current_version}\";"
+
+[bumpversion:file:raiden/smart_contracts/Utils.sol]
+search = "contract_version = \"{current_version}\";"
