Use only {major}.{minor} version in contracts
This allows to do bugfix releases of the python software without
introducing (semantically) breaking changes to the smart contract
versions which will require redeployment.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,23 +4,31 @@ commit = True
 tag = False
 
 [bumpversion:file:setup.py]
+serialize = {major}.{minor}.{patch}
 
 [bumpversion:file:docs/conf.py]
+serialize = {major}.{minor}.{patch}
 
 [bumpversion:file:raiden/smart_contracts/ChannelManagerLibrary.sol]
-search = "contract_version = \"{current_version}\";"
+parse = contract_version = "(?P<major>\d+)\.(?P<minor>\d+)\._";
+serialize = contract_version = "{major}.{minor}._";
 
 [bumpversion:file:raiden/smart_contracts/EndpointRegistry.sol]
-search = "contract_version = \"{current_version}\";"
+parse = contract_version = "(?P<major>\d+)\.(?P<minor>\d+)\._";
+serialize = contract_version = "{major}.{minor}._";
 
 [bumpversion:file:raiden/smart_contracts/NettingChannelContract.sol]
-search = "contract_version = \"{current_version}\";"
+parse = contract_version = "(?P<major>\d+)\.(?P<minor>\d+)\._";
+serialize = contract_version = "{major}.{minor}._";
 
 [bumpversion:file:raiden/smart_contracts/NettingChannelLibrary.sol]
-search = "contract_version = \"{current_version}\";"
+parse = contract_version = "(?P<major>\d+)\.(?P<minor>\d+)\._";
+serialize = contract_version = "{major}.{minor}._";
 
 [bumpversion:file:raiden/smart_contracts/Registry.sol]
-search = "contract_version = \"{current_version}\";"
+parse = contract_version = "(?P<major>\d+)\.(?P<minor>\d+)\._";
+serialize = contract_version = "{major}.{minor}._";
 
 [bumpversion:file:raiden/smart_contracts/Utils.sol]
-search = "contract_version = \"{current_version}\";"
+parse = contract_version = "(?P<major>\d+)\.(?P<minor>\d+)\._";
+serialize = contract_version = "{major}.{minor}._";
