--- a/raiden/ui/web/package.json
+++ b/raiden/ui/web/package.json
@@ -39,7 +39,7 @@
     "zone.js": "0.8.17"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.2",
+    "@angular/cli": "1.4.0",
     "@angular/compiler-cli": "4.3.6",
     "@types/jasmine": "2.5.54",
     "@types/node": "8.0.26",
@@ -55,6 +55,7 @@
     "protractor": "5.1.2",
     "ts-node": "3.3.0",
     "tslint": "5.7.0",
-    "typescript": "2.5.2"
+    "typescript": "2.5.2",
+    "webpack": "^3.5.6"
   }
 }
