Add version to ChannelManagerContract

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -13,6 +13,10 @@ serialize = {major}.{minor}.{patch}
 parse = contract_version = "(?P<major>\d+)\.(?P<minor>\d+)\._";
 serialize = contract_version = "{major}.{minor}._";
 
+[bumpversion:file:raiden/smart_contracts/ChannelManagerContract.sol]
+parse = contract_version = "(?P<major>\d+)\.(?P<minor>\d+)\._";
+serialize = contract_version = "{major}.{minor}._";
+
 [bumpversion:file:raiden/smart_contracts/EndpointRegistry.sol]
 parse = contract_version = "(?P<major>\d+)\.(?P<minor>\d+)\._";
 serialize = contract_version = "{major}.{minor}._";
