--- a/.travis.yml
+++ b/.travis.yml
@@ -26,11 +26,11 @@ env:
 #  - "$HOME/.cache/pip"
 #  - "$HOME/.ethash"
 #  - "$HOME/.bin"
-#before_install:
+before_install: true
 #  - mkdir -p $HOME/.bin
 #  - export PATH=$PATH:$HOME/.bin
 #  - ./.travis/before_install.sh
-#install:
+install: true
 #  ./.travis/install.sh
 #before_script:
 #  ./.travis/before_script.sh
