--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
 - '2.7'
 env:
   global:
-  - GETH_URL='https://gethstore.blob.core.windows.net/builds/geth-linux-amd64-1.7.0-6c6c7b2a.tar.gz'
+  - GETH_URL_LINUX='https://gethstore.blob.core.windows.net/builds/geth-linux-amd64-1.7.0-6c6c7b2a.tar.gz'
+  - GETH_URL_MACOS='https://gethstore.blob.core.windows.net/builds/geth-darwin-amd64-1.7.0-6c6c7b2a.tar.gz'
   - GETH_VERSION='1.7.0'
   - SOLC_URL='https://github.com/ethereum/solidity/releases/download/v0.4.16/solc-static-linux'
   - SOLC_VERSION='v0.4.16'
@@ -28,7 +29,7 @@ env:
 #  - "$HOME/.bin"
 before_install: true
 #  - mkdir -p $HOME/.bin
-#  - export PATH=$PATH:$HOME/.bin
+#  - export PATH=$PATH:$HOME/.bin:$HOME/Library/Python/2.7/bin
 #  - ./.travis/before_install.sh
 install: true
 #  ./.travis/install.sh
@@ -77,13 +78,10 @@ jobs:
       osx_image: xcode6.4
       before_install:
         - mkdir -p $HOME/.bin
-        - export PATH=$PATH:$HOME/.bin
+        - export PATH=$PATH:$HOME/.bin:$HOME/Library/Python/2.7/bin
         - .travis/before_install.sh
-        - sudo pip install -U pip
-        - sudo pip install -U virtualenv
       install:
         - .travis/install.sh
-        - brew install node
       before_script:
         - .travis/before_script.sh
         - python setup.py compile_contracts
