--- a/.travis.yml
+++ b/.travis.yml
@@ -87,6 +87,9 @@ jobs:
         - mkdir -p $HOME/.bin
         - export PATH=$PATH:$HOME/.bin:$HOME/Library/Python/2.7/bin
         - .travis/before_install.sh
+        - ls -la $HOME/.bin
+        - solc --version
+        - geth --version
       install:
         - .travis/install.sh
       before_script:
