--- a/.travis.yml
+++ b/.travis.yml
@@ -84,6 +84,7 @@ jobs:
         - ls -la $HOME/.bin
         - uname -a
         - sw_vers
+        - xcodebuild -version
         - solc --version
         - geth --version
       install:
