--- a/.travis.yml
+++ b/.travis.yml
@@ -78,6 +78,7 @@ jobs:
       language: generic
       osx_image: xcode6.4
       before_install:
+        - sysctl -n machdep.cpu.brand_string
         - mkdir -p $HOME/.bin
         - export PATH=$PATH:$HOME/.bin:$HOME/Library/Python/2.7/bin
         - .travis/before_install.sh
