--- a/raiden/ui/web/package.json
+++ b/raiden/ui/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raidenwebui",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -15,35 +15,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.3.6",
-    "@angular/common": "4.3.6",
-    "@angular/compiler": "4.3.6",
-    "@angular/core": "4.3.6",
-    "@angular/flex-layout": "2.0.0-beta.9",
-    "@angular/forms": "4.3.6",
-    "@angular/http": "4.3.6",
-    "@angular/platform-browser": "4.3.6",
-    "@angular/platform-browser-dynamic": "4.3.6",
-    "@angular/platform-server": "4.3.6",
-    "@angular/router": "4.3.6",
+    "@angular/animations": "5.0.1",
+    "@angular/common": "5.0.1",
+    "@angular/compiler": "5.0.1",
+    "@angular/core": "5.0.1",
+    "@angular/flex-layout": "2.0.0-beta.10-4905443",
+    "@angular/forms": "5.0.1",
+    "@angular/http": "5.0.1",
+    "@angular/platform-browser": "5.0.1",
+    "@angular/platform-browser-dynamic": "5.0.1",
+    "@angular/platform-server": "5.0.1",
+    "@angular/router": "5.0.1",
     "bootstrap": "3.3.7",
     "core-js": "2.5.1",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
-    "ng-sidebar": "6.0.1",
-    "ngx-clipboard": "8.0.4",
-    "npm-check-updates": "^2.12.1",
-    "primeng": "4.1.3",
-    "rxjs": "5.4.3",
+    "ng-sidebar": "6.0.4",
+    "ngx-clipboard": "8.1.1",
+    "npm-check-updates": "^2.13.0",
+    "primeng": "5.0.0-rc.0",
+    "rxjs": "^5.5.2",
     "web3": "0.20.1",
-    "zone.js": "0.8.17"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.2",
-    "@angular/compiler-cli": "4.3.6",
-    "@types/jasmine": "2.5.54",
-    "@types/node": "8.0.26",
-    "codelyzer": "3.1.2",
+    "@angular/cli": "1.5.0",
+    "@angular/compiler-cli": "5.0.1",
+    "@types/jasmine": "2.8.0",
+    "@types/node": "8.0.51",
+    "codelyzer": "4.0.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "1.7.1",
@@ -52,10 +52,10 @@
     "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "protractor": "5.1.2",
+    "protractor": "5.2.0",
     "ts-node": "3.3.0",
-    "tslint": "5.7.0",
-    "typescript": "2.3.4",
-    "webpack": "^3.5.6"
+    "tslint": "5.8.0",
+    "typescript": "2.6.1",
+    "webpack": "^3.8.1"
   }
 }
