--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ cache:
   - "$HOME/.bin"
 before_install:
   - mkdir -p $HOME/.bin
-  - export PATH=$PATH:$HOME/.bin
+  - export PATH=$PATH:$HOME/.bin:$HOME/Library/Python/2.7/bin
   - ./.travis/before_install.sh
 install:
   ./.travis/install.sh
