--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,6 @@ dist: trusty
 sudo: true
 
 language: python
-python:
-- '2.7'
-os:
-  - linux
-  - osx
 env:
   global:
   - GETH_URL='https://gethstore.blob.core.windows.net/builds/geth-linux-amd64-1.7.2-1db4ecdc.tar.gz'
@@ -14,15 +9,22 @@ env:
   - SOLC_URL='https://github.com/ethereum/solidity/releases/download/v0.4.18/solc-static-linux'
   - SOLC_VERSION='v0.4.18'
   matrix:
-  - TEST_TYPE='unit'
-  - TEST_TYPE='smart_contracts'
-  - TEST_TYPE='property'
-  - TEST_TYPE='long_running' BLOCKCHAIN_TYPE='--blockchain-type=tester'
-  - TEST_TYPE='long_running' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
-  - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=tester'
-  - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
-  - TEST_TYPE='api' BLOCKCHAIN_TYPE='--blockchain-type=tester'
-  - TEST_TYPE='api' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
+    include:
+    - os: linux
+      sudo: required
+      python: 2.7
+      env: TEST_TYPE='unit'
+    - os: osx
+      language: generic
+      env: TEST_TYPE='unit'
+  # - TEST_TYPE='smart_contracts'
+  # - TEST_TYPE='property'
+  # - TEST_TYPE='long_running' BLOCKCHAIN_TYPE='--blockchain-type=tester'
+  # - TEST_TYPE='long_running' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
+  # - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=tester'
+  # - TEST_TYPE='integration' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
+  # - TEST_TYPE='api' BLOCKCHAIN_TYPE='--blockchain-type=tester'
+  # - TEST_TYPE='api' BLOCKCHAIN_TYPE='--blockchain-type=geth --blockchain-cache'
 cache:
   pip: true
   directories:
