remove tester from the test suite

--- a/tox.ini
+++ b/tox.ini
@@ -23,16 +23,16 @@ basepython = python2.7
 usedevelop = True
 deps =
     -rrequirements-dev.txt
-commands = pytest --cov-append --blockchain-type=tester --exitfirst {posargs:./raiden/}
+commands = pytest --cov-append --exitfirst {posargs:./raiden/}
 
 [testenv:smart_contracts]
-commands = pytest --cov-append --initial-port=2000 --blockchain-type=tester --exitfirst ./raiden/tests/smart_contracts {posargs}
+commands = pytest --cov-append --initial-port=2000 --exitfirst ./raiden/tests/smart_contracts {posargs}
 
 [testenv:integration]
-commands = pytest --cov-append --initial-port=3000 --blockchain-type=tester --exitfirst ./raiden/tests/integration {posargs}
+commands = pytest --cov-append --initial-port=3000 --exitfirst ./raiden/tests/integration {posargs}
 
 [testenv:unit]
-commands = pytest --cov-append --initial-port=4000 --blockchain-type=tester --exitfirst ./raiden/tests/unit {posargs}
+commands = pytest --cov-append --initial-port=4000 --exitfirst ./raiden/tests/unit {posargs}
 
 [testenv:api]
-commands = pytest --cov-append --initial-port=5000 --blockchain-type=tester --exitfirst ./raiden/tests/api {posargs}
+commands = pytest --cov-append --initial-port=5000 --exitfirst ./raiden/tests/api {posargs}
