--- a/raiden/ui/web/package.json
+++ b/raiden/ui/web/package.json
@@ -39,7 +39,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
+    "@angular/cli": "^1.6.0",
     "@angular/compiler-cli": "5.0.1",
     "@types/jasmine": "2.8.0",
     "@types/node": "8.0.51",
