Update packages and sync configs to current angular-cli project

--- a/raiden/ui/web/src/tsconfig.app.json
+++ b/raiden/ui/web/src/tsconfig.app.json
@@ -1,19 +1,10 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "noStrictGenericChecks": true,
-    "target": "es5",
-    "lib": [
-      "es2016",
-      "dom"
-    ],
     "outDir": "../out-tsc/app",
+    "baseUrl": "./",
     "module": "es2015",
-    "baseUrl": "",
     "types": []
   },
   "exclude": [
