Use eth-tester for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ python:
 install: pip install -r requirements_dev.txt
 
 # Command to run tests, e.g. python setup.py test
-script: python setup.py test
+script:
+  - make lint
+  - python setup.py test
 
 
