Add contract deployment fixtures (#10)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 Click>=6.0
 coincurve
 
-eth-tester[pyethereum21]>=0.1.0-beta.21,<1.0
+eth-tester[pyethereum16]>=0.1.0-beta.21,<1.0
 
-ethereum>=2.0.0,<2.2.0
-eth_utils>=1.0.1,<2.0
+ethereum>=1.6.0,<2.0.0
 web3>=4.0.0-beta.11,<5.0
+eth-utils>=1.0.1,<2.0.0
 
 flask
 flask_restful
